@@ -151,7 +151,7 @@ if [ "${hrd_pth}" = 'Yes' ] && [ "${NCO_PATH_OVERRIDE}" = 'Yes' ]; then
     case "${HOSTNAME}" in 
 	acme1* )
 	    if [ ${spt_nm} = 'ncremap' ]; then
-		E3SMU_ROOT='/usr/local/e3sm_unified/envs/base/envs/e3sm_unified_latest'
+		E3SMU_ROOT='/p/user_pub/e3sm_unified/envs/base/envs/e3sm_unified_latest'
 	    fi # !ncremap
 	    export PATH='/home/zender1/bin'\:${PATH}
             export LD_LIBRARY_PATH='/home/zender1/lib'\:${LD_LIBRARY_PATH} ; ;;
@@ -385,10 +385,11 @@ fi # !hrd_pth && !NCO_PATH_OVERRIDE
 # ncremap -v lat,lon,FSNT,AODVIS,T,Q,U,V,Z3 --vrt_xtr=mss_val --vrt_out=${DATA}/grids/vrt_hyb_L72.nc ${DATA}/bm/eamv2_ne30pg2l72.nc ~/foo.nc # Extrapolation results in missing values
 # Simultaneous horizontal/vertical regridding L72->L30
 # ncremap -v lat,lon,FSNT,AODVIS,T,Q,U,V,Z3 --map=${DATA}/maps/map_ne30pg2_to_cmip6_180x360_aave.20200201.nc --vrt_out=${DATA}/grids/vrt_hyb_L30.nc ${DATA}/bm/eamv2_ne30pg2l72.nc ~/foo.nc
+# ncremap -P mpasocean -v timeMonthly_avg_activeTracers_temperature --dpt_nm=${DATA}/bm/mpov2_EC30to60E2r2l60.nc/timeMonthly_avg_zMid --map=${DATA}/maps/map_EC30to60E2r2_to_cmip6_180x360_nco.20220301.nc --vrt_out=${DATA}/grids/vrt_dpt_L10.nc ${DATA}/bm/mpov2_EC30to60E2r2l60.nc ~/foo.nc
 # SCREAM external surface pressure and input vertical grid (202211):
 # ncremap -v T_mid --ps_nm=${DATA}/bm/screamv1_ne1024pg2l128_QrPsPsl.nc/ps --vrt_in=${DATA}/grids/vrt_hyb_L128.nc --vrt_out=${DATA}/grids/vrt_prs_ncep_L17.nc ${DATA}/bm/screamv1_ne1024pg2l128_QvT.nc ~/foo.nc
 # ncremap -6 -P eamxx --map=${DATA}/maps/map_ne1024pg2_to_fv256x512_mono.20201201.nc ${DATA}/bm/screamv1_ne1024pg2l128.nc ~/foo.nc # Panoply breaks on CDF5 input
-# Time-varying hybrid input
+# Interpolate time-varying hybrid input
 # ncremap -v FSNT,AODVIS,T,Q,U,V,Z3 --map=${DATA}/maps/map_ne30pg2_to_cmip6_180x360_aave.20200201.nc --drc_out=${DATA}/ne30/rgr ${DATA}/ne30/raw/v2.LR.historical_0101.eam.h0.2013-0[123].nc
 # ncrcat -O -v FSNT,AODVIS,T,Q,U,V,Z3 ${DATA}/ne30/rgr/v2.LR.historical_0101.eam.h0.2013-0[12].nc ${DATA}/ne30/rgr/v2.LR.historical_0101.eam.h0.201301_201302.nc
 # ncremap --dbg=3 -v FSNT,AODVIS,T,Q,U,V,Z3 --vrt_out=${DATA}/grids/vrt_prs_ncep_L17.nc ${DATA}/ne30/rgr/v2.LR.historical_0101.eam.h0.201301_201302.nc ~/foo.nc
@@ -500,6 +501,7 @@ dfl_lvl='' # [enm] Deflate level
 dpt_exe_mpas='add_depth.py' # [sng] Depth coordinate addition command for MPAS
 dpt_flg='No' # [flg] Add depth coordinate to MPAS files
 dpt_fl='' # [sng] Depth file with refBottomDepth for MPAS ocean
+dpt_nm='' # [sng] Name of variable containing 3D depth/height in input file
 #drc_in="${drc_pwd}" # [sng] Input file directory
 drc_in='' # [sng] Input file directory
 drc_in_xmp='~/drc_in' # [sng] Input file directory for examples
@@ -655,6 +657,7 @@ function fnc_usg_prn { # NB: dash supports fnc_nm (){} syntax, not function fnc_
     echo " ${fnt_bld}--devnull${fnt_nrm}  Send NCO weight-generator messages to /dev/null (default ${fnt_bld}${dvn_flg}${fnt_nrm}) [${fnt_tlc}devnull, dev_nll, dvn_flg${fnt_nrm}]"
     echo " ${fnt_bld}--dpt${fnt_nrm}      Add depth coordinate to MPAS files (default ${fnt_bld}${dpt_flg}${fnt_nrm}) [${fnt_tlc}dpt | depth | add_dpt | add_depth${fnt_nrm}]"
     echo " ${fnt_bld}--dpt_fl${fnt_nrm}   Depth file with refBottomDepth for MPAS ocean (empty means none) (default ${fnt_bld}${dpt_fl}${fnt_nrm}) [${fnt_tlc}dpt_fl, mpas_fl, mpas_depth, depth_file${fnt_nrm}]"
+    echo " ${fnt_bld}--dpt_nm${fnt_nrm}   3D-Depth/height variable name (default ${fnt_bld}${dpt_nm}${fnt_nrm}) [${fnt_tlc}dpt_nm, depth_name, vrt_dpt${fnt_nrm}]"
     echo " ${fnt_bld}--dt_sng${fnt_nrm}   Date string (for MWF map names) (default ${fnt_bld}${dt_sng}${fnt_nrm}) [${fnt_tlc}dt_sng, date_string${fnt_nrm}]"
     echo " ${fnt_bld}--esmf_typ${fnt_nrm} ESMF Extrapolation type (empty means none) (default ${fnt_bld}${esmf_typ}${fnt_nrm}) [${fnt_tlc}esmf_typ, esmf_mth, esmf_extrap_type, esmf_extrap_method${fnt_nrm}] (nearestidavg|neareststod|none)"
     echo " ${fnt_bld}--fl_fmt${fnt_nrm}   File format (empty is netCDF3 64bit CDF2) (default ${fnt_bld}${fl_fmt}${fnt_nrm}) [${fnt_tlc}fl_fmt, fmt_out, file_format, format_out${fnt_nrm}]"
@@ -844,6 +847,7 @@ while getopts :34567a:CD:d:f:g:G:h:I:i:j:L:Mm:n:O:o:P:p:R:r:s:T:t:Uu:V:v:W:w:x:-
 	       dpt | depth | add_dpt | add_depth ) dpt_flg='Yes' ;; # # Add depth coordinate to MPAS files
 	       dpt=?* | depth=?* | add_dpt=?* | add_depth=?* ) echo "No argument allowed for --${OPTARG switch}" >&2; exit 1 ;; # # DPT
 	       dpt_fl=?* | mpas_fl=?* | mpas_file=?* | depth_file=?* ) dpt_fl="${LONG_OPTARG}" ;; # # Depth file with refBottomDepth for MPAS ocean
+	       dpt_nm=?* | depth_name=?* | vrt_dpt=?* ) dpt_nm="${LONG_OPTARG}" ;; # # 3D-depth/height variable name
 	       dst_fl=?* | destination_file=?* | tpl=?* | tpl_fl=?* | template=?* | template_file=?* ) dst_fl="${LONG_OPTARG}" ;; # -d # Destination file
 	       grd_dst=?* | grid_dest=?* | dst_grd=?* | dest_grid=?* | destination_grid=?* ) grd_dst="${LONG_OPTARG}" ;; # -g # Destination grid-file
 	       grd_sng=?* | grid_generation=?* | grid_gen=?* | grid_string=?* ) grd_sng="${LONG_OPTARG}" ;; # -G # Grid generation string
@@ -1623,7 +1627,7 @@ if [ "${prc_typ}" = 'mod04' ]; then
 fi # !mod04
 if [ "${prc_typ}" = 'mali' ] || [ "${prc_typ}" = 'mpas' ] || [ "${prc_typ}" = 'mpaso' ] || [ "${prc_typ}" = 'mpasocean' ] || [ "${prc_typ}" = 'mpascice' ] || [ "${prc_typ}" = 'mpasseaice' ] || [ "${prc_typ}" = 'mpassi' ]; then 
     prc_mpas='Yes'
-fi # !mpas, !mpascice, !mpasseaice, !mpassi
+fi # !mpas, !mpascice, !mpaso, !mpasocean, !mpasseaice, !mpassi
 if [ "${prc_mpas}" = 'Yes' ]; then 
 
     # Add/alter missing metadata to MPAS files unless script was invoked by ncclimo
@@ -1917,6 +1921,17 @@ if [ -n "${vrt_out}" ]; then
 	exit 1
     fi # ! -f
     vrt_usr_flg='Yes'
+#    if [ "${prc_typ}" = 'mpaso' ] || [ "${prc_typ}" = 'mpasocean' ]; then
+#	if [ "${pdq_flg}" = 'Yes' ]; then
+#	    # 20221214 Keep multidimensional auxiliary coordinates needed for vertical interpolation
+#	    if [ -n "${nco_var_lst}" ]; then 
+#		nco_var_lst="${nco_var_lst},timeMonthly_avg_zMid"
+#	    fi # !var_lst
+#	fi # !pdq_opt && !pdq_flg
+#    fi # !mpaso
+    if [ -n "${dpt_nm}" ]; then
+	vrt_opt="${vrt_opt} --rgr dpt_nm_in=${dpt_nm}"
+    fi # !dpt_nm
     if [ -n "${ps_nm}" ]; then
 	vrt_opt="${vrt_opt} --rgr ps_nm_in=${ps_nm}"
     fi # !ps_nm
@@ -2258,6 +2273,7 @@ if [ ${dbg_lvl} -ge 2 ]; then
     printf "dbg: dfl_lvl  = ${dfl_lvl}\n"
     printf "dbg: dpt_flg  = ${dpt_flg}\n"
     printf "dbg: dpt_fl   = ${dpt_fl}\n"
+    printf "dbg: dpt_nm   = ${dpt_nm}\n"
     printf "dbg: drc_in   = ${drc_in}\n"
     printf "dbg: drc_out  = ${drc_out}\n"
     printf "dbg: drc_tmp  = ${drc_tmp}\n"
